--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -1,5 +1,7 @@
 FROM easypi/alpine-arm
 
+RUN [ "cross-build-start" ]
+
 RUN apk add --update python py-pip
 
 ADD *.py /src/
@@ -7,4 +9,7 @@ ADD requirements.txt /src/
 
 WORKDIR /src
 RUN pip install -r requirements.txt
+
+RUN [ "cross-build-end" ]
+
 CMD ["python", "cashbot.py", "/config/config.yml"]
